--- a/Aufgabe_8/index.html
+++ b/Aufgabe_8/index.html
@@ -37,7 +37,7 @@
         <p>Hallo und herzlich willkommen!</p>
         <p>Dies ist eine einfache Startseite für unseren Webserver.</p>
         <p>Vielen Dank für Ihren Besuch!</p>
-        <img src="example.jpg" alt="Beispielbild">
+        <img src="img/PC.png" alt="Client-Server">
     
     <h1>POST-Anfrage senden</h1>
     <form id="postForm">
