--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html><html data-bs-theme="light" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Untitled</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=d23cc636d169d2310d203c10a6b45074"><link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"></head><body><!-- Start: login form --><div class="container full-height"><div class="row flex center v-center full-height"><div class="col-8 col-sm-4"><div class="form-box"><form><fieldset><legend>Sign in</legend><img id="avatar" class="avatar round" src="/assets/img/avatar.png?h=918044b254966c0c29a9633dfdc7313b"><input class="form-control" type="email" id="username" name="username" placeholder="username"><input class="form-control" type="password" id="password" name="password" placeholder="password"><button class="btn btn-primary d-block w-100" type="button" onclick = "checkLogin()">LOGIN </button></fieldset></form></div></div></div></div><!-- End: login form --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script><script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script><script src="/assets/js/script.min.js?h=5683a79a32855cb8105052c547b321d2"></script></body></html>
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/styles.min.css?h=d23cc636d169d2310d203c10a6b45074">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
+</head>
+
+<body><!-- Start: login form -->
+    <div class="container full-height">
+        <div class="row flex center v-center full-height">
+            <div class="col-8 col-sm-4">
+                <div class="form-box">
+                    <form>
+                        <fieldset>
+                            <legend>Sign in</legend><img id="avatar" class="avatar round"
+                                src="/assets/img/avatar.png?h=918044b254966c0c29a9633dfdc7313b"><input
+                                class="form-control" type="email" id="username" name="username"
+                                placeholder="username"><input class="form-control" type="password" id="password"
+                                name="password" placeholder="password"><button class="btn btn-primary d-block w-100"
+                                type="button" onclick="checkLogin()">LOGIN </button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div><!-- End: login form -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script src="/assets/js/script.min.js?h=5683a79a32855cb8105052c547b321d2"></script>
+</body>
+
+</html>
