--- a/02_table_layout.html
+++ b/02_table_layout.html
@@ -1,47 +1,8 @@
-<!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css?h=d23cc636d169d2310d203c10a6b45074">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
-</head>
-
-<body><!-- Start: Navbar With Button -->
-    <nav class="navbar navbar-expand-md bg-body py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/01_startpage.html"><span>
-                    <img src="/assets/img/logo.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon"
-                        height="30px" ;>
-                </span><span style="margin-left: 10px;"> Cioban</span></a>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false"
-                            data-bs-toggle="dropdown" href="#">Übersichten</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Personal</a><a
-                                class="dropdown-item" href="#">Projekte</a><a class="dropdown-item" href="#">...</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false"
-                            data-bs-toggle="dropdown" href="#">Dropdown </a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a
-                                class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third
-                                Item</a></div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Second Item</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Third Item</a></li>
-                </ul><a class="navbar-brand d-flex align-items-center" href="/index.html"><span>
-                        <img src="/assets/img/homebutton.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon"
-                            height="30px" ;>
-                    </span></a>
-            </div>
-        </div>
-    </nav><!-- End: Navbar With Button -->
-    <div class="main"></div><!-- Start: Data Table -->
-    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+<!DOCTYPE html><html data-bs-theme="light" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Untitled</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=d23cc636d169d2310d203c10a6b45074"><link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"></head><body><!-- Start: Navbar With Button --><nav class="navbar navbar-expand-md bg-body py-3"><div class="container"><a class="navbar-brand d-flex align-items-center" href="/01_startpage.html"><span >
+<img src="/assets/img/logo.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon" height= "30px";>
+</span><span style="margin-left: 10px;"> Cioban</span></a><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav me-auto"><li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Übersichten</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Personal</a><a class="dropdown-item" href="#">Projekte</a><a class="dropdown-item" href="#">...</a></div></li><li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a><div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div></li><li class="nav-item"><a class="nav-link" href="#">Second Item</a></li><li class="nav-item"><a class="nav-link" href="#">Third Item</a></li></ul><a class="navbar-brand d-flex align-items-center" href="/index.html"><span>
+<img src="/assets/img/homebutton.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon" height= "30px";>
+</span></a></div></div></nav><!-- End: Navbar With Button --><div class="main"></div><!-- Start: Data Table --><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Name</th>
@@ -510,34 +471,4 @@
                 <td>$112,000</td>
             </tr>
         </tbody>
-    </table><!-- End: Data Table --><!-- Start: Footer with social media icons -->
-    <footer id="footerpad">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-lg-8 mx-auto">
-                    <ul class="list-inline text-center">
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i
-                                        class="fa fa-circle fa-stack-2x"></i><i
-                                        class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i
-                                        class="fa fa-circle fa-stack-2x"></i><i
-                                        class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i
-                                        class="fa fa-circle fa-stack-2x"></i><i
-                                        class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a></li>
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i
-                                        class="fa fa-circle fa-stack-2x"></i><i
-                                        class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a></li>
-                    </ul>
-                    <p class="copyright text-muted text-center">Copyright © Cioban 2024 | Web Design by WI22B</p>
-                </div>
-            </div>
-        </div>
-    </footer><!-- End: Footer with social media icons -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-    <script src="/assets/js/script.min.js?h=5683a79a32855cb8105052c547b321d2"></script>
-</body>
-
-</html>
+    </table><!-- End: Data Table --><!-- Start: Footer with social media icons --><footer id="footerpad"><div class="container"><div class="row"><div class="col-md-6 col-lg-8 mx-auto"><ul class="list-inline text-center"><li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li><li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li><li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a></li><li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a></li></ul><p class="copyright text-muted text-center">Copyright © Cioban 2024 | Web Design by WI22B</p></div></div></div></footer><!-- End: Footer with social media icons --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script><script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script><script src="/assets/js/script.min.js?h=5683a79a32855cb8105052c547b321d2"></script></body></html>
