--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -279,7 +279,7 @@
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="/assets/js/script.min.js?h=5683a79a32855cb8105052c547b321d2"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function() {
     $('#personalTable').DataTable({
