edit Perosnal ex int stat

--- a/GUI/021_internalOV.html
+++ b/GUI/021_internalOV.html
@@ -2,19 +2,196 @@
 <img src="/assets/img/logo.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon" height= "30px";>
 </span><span style="margin-left: 10px;"> Cioban</span></a><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav me-auto"><li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="">Übersichten</a><div class="dropdown-menu"><a class="dropdown-item" href="/02_personalOV.html">Personal</a><a class="dropdown-item" href="/03_projectsOV.html">Projekte</a><a class="dropdown-item" href="/04_departmentOV.html">Abteilungen</a><a class="dropdown-item" href="/05_adressOV.html">Adressen</a></div></li><li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Definitionen</a><div class="dropdown-menu"><a class="dropdown-item" href="/06_typeOV.html">Typen</a><a class="dropdown-item" href="/07_educationDegreeOV.html">Abschlüsse</a><a class="dropdown-item" href="/08_jobOV.html">Berufe</a><a class="dropdown-item" href="/09_skillOV.html">Fähigkeiten</a><a class="dropdown-item" href="/10_experienceLevelOV.html">Erfahrungsstufen</a></div></li><li class="nav-item"><a class="nav-link" href="/11_searchPage.html">Suche</a></li></ul><a class="navbar-brand d-flex align-items-center" href="/index.html"><span>
 <img src="/assets/img/logout.png?h=199e5cad613b031525576a5c217e8b00" alt="Navigation Icon" height= "30px";>
-</span></a></div></div></nav><!-- End: Navbar With Button --><!-- Start: divider-text-middle --><div style="text-align:center;"><h2 class="divider-style"><span>Typen</span></h2></div><!-- End: divider-text-middle --> <div class="orgTable" style="z-index: 1;">
-     <table id="typeTable" style="width:100%; overflow: auto;" border="1">
+</span></a></div></div></nav><!-- End: Navbar With Button --><!-- Start: divider-text-middle --><div style="text-align: center;">
+    <h2 class="divider-style"><span>Interne</span></h2>
+    <div style="margin-top: -10px;">
+        <a href="/02_personalOV.html" style="text-decoration: none; color: #333; margin-right: 20px ; vertical-align: super;">Personal</a>
+        <a href="/022_externalOV.html" style="text-decoration: none; color: #333; margin-right: 20px;">Externe</a>
+        <a href="/023_statOV.html" style="text-decoration: none; color: #333;vertical-align: super;">StuZubis</a>
+    </div>
+</div><!-- End: divider-text-middle --> <div class="orgTable" style="z-index: 1;">
+        <table id="personalTable" style="width:100%; overflow: auto;" border="1">
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Bezeichnung</th>
-                    <th>Beschreibung</th>
+                    <th>Vorname</th>
+                    <th>Name</th>
+                    <th>freie FTE</th>
+                    <th>Mail</th>
+                    <th>Tel. Nummer</th>
+                    <th>Beschäftigungsstart</th>
+                    <th>Erfahrungsgrad</th>
+                    <th>Typ</th>
                 </tr>
             </thead>
-            <tbody>
-                <!-- Hier werden die Zeilen dynamisch hinzugefügt -->
-            </tbody>
-        </table>    
+<tbody>
+    <tr>
+        <td>1</td>
+        <td>Max</td>
+        <td>Mustermann</td>
+        <td>0.5</td>
+        <td>max.mustermann@example.com</td>
+        <td>123456789</td>
+        <td>2023-01-01</td>
+        <td>Fortgeschritten</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Lisa</td>
+        <td>Müller</td>
+        <td>0.8</td>
+        <td>lisa.mueller@example.com</td>
+        <td>987654321</td>
+        <td>2022-05-15</td>
+        <td>Anfänger</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Tom</td>
+        <td>Schmidt</td>
+        <td>1.0</td>
+        <td>tom.schmidt@example.com</td>
+        <td>456789123</td>
+        <td>2021-09-30</td>
+        <td>Erfahren</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Sarah</td>
+        <td>Krüger</td>
+        <td>0.6</td>
+        <td>sarah.krueger@example.com</td>
+        <td>789123456</td>
+        <td>2022-11-20</td>
+        <td>Fortgeschritten</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>Michael</td>
+        <td>Wagner</td>
+        <td>0.9</td>
+        <td>michael.wagner@example.com</td>
+        <td>321654987</td>
+        <td>2023-03-10</td>
+        <td>Erfahren</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>Julia</td>
+        <td>Hoffmann</td>
+        <td>0.7</td>
+        <td>julia.hoffmann@example.com</td>
+        <td>654987321</td>
+        <td>2021-07-05</td>
+        <td>Fortgeschritten</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>Kevin</td>
+        <td>Becker</td>
+        <td>0.8</td>
+        <td>kevin.becker@example.com</td>
+        <td>987321654</td>
+        <td>2022-02-28</td>
+        <td>Anfänger</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>Anna</td>
+        <td>Klein</td>
+        <td>0.6</td>
+        <td>anna.klein@example.com</td>
+        <td>321987654</td>
+        <td>2023-06-15</td>
+        <td>Fortgeschritten</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>Christian</td>
+        <td>Schulz</td>
+        <td>1.0</td>
+        <td>christian.schulz@example.com</td>
+        <td>654321987</td>
+        <td>2021-12-10</td>
+        <td>Erfahren</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>10</td>
+        <td>Laura</td>
+        <td>Neumann</td>
+        <td>0.8</td>
+        <td>laura.neumann@example.com</td>
+        <td>987654321</td>
+        <td>2022-08-20</td>
+        <td>Fortgeschritten</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>Markus</td>
+        <td>Herrmann</td>
+        <td>0.9</td>
+        <td>markus.herrmann@example.com</td>
+        <td>123987654</td>
+        <td>2023-04-05</td>
+        <td>Erfahren</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>12</td>
+        <td>Sabrina</td>
+        <td>Kaiser</td>
+        <td>0.7</td>
+        <td>sabrina.kaiser@example.com</td>
+        <td>456789123</td>
+        <td>2021-10-15</td>
+        <td>Fortgeschritten</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>13</td>
+        <td>Philipp</td>
+        <td>Lehmann</td>
+        <td>0.6</td>
+        <td>philipp.lehmann@example.com</td>
+        <td>789123456</td>
+        <td>2022-01-30</td>
+        <td>Anfänger</td>
+        <td>Vollzeit</td>
+    </tr>
+    <tr>
+        <td>14</td>
+        <td>Jennifer</td>
+        <td>Fischer</td>
+        <td>0.8</td>
+        <td>jennifer.fischer@example.com</td>
+        <td>321654987</td>
+        <td>2023-07-10</td>
+        <td>Fortgeschritten</td>
+        <td>Teilzeit</td>
+    </tr>
+    <tr>
+        <td>15</td>
+        <td>David</td>
+        <td>Lange</td>
+        <td>1.0</td>
+        <td>david.lange@example.com</td>
+        <td>654987321</td>
+        <td>2022-03-28</td>
+        <td>Erfahren</td>
+        <td>Vollzeit</td>
+    </tr>
+</tbody>
+        </table>
     </div><!-- Start: Footer Multi Column --><footer><div class="container py-4 py-lg-5" style="background-color: lightgray;margin-left: 5vw;margin-right: 5vw;max-width: 90%;min-width: 70%;"><div class="row justify-content-center"><!-- Start: About --><div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item"><h3 class="fs-6">About</h3><ul class="list-unstyled"><li><a class="link-secondary" href="/12_contactPage.html">Kontakt</a></li><li><a class="link-secondary" href="/13_teamPage.html">Team</a></li><li><a class="link-secondary" href="/14_impressPage.html">Impressum</a></li></ul></div><!-- End: About --><!-- Start: Social Icons --><div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social"><div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="/assets/img/logo.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon" height= "30px";></span><span>CIOBAN</span></div><p class="text-muted copyright">Der Manager Ihres Vertrauens!</p></div><!-- End: Social Icons --></div><hr><div class="d-flex justify-content-between align-items-center pt-3"><p class="text-muted mb-0">Copyright © 2024 Cioban</p><ul class="list-inline mb-0"><li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
 </svg></li><li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
