--- a/GUI/01_startpage.html
+++ b/GUI/01_startpage.html
@@ -5,9 +5,9 @@
 </span></a></div></div></nav><!-- End: Navbar With Button --><!-- Start: divider-text-middle --><div style="text-align:center;"><h2 class="divider-style"><span>Home</span></h2></div><!-- End: divider-text-middle --><div>To Do: 
     <ul>
     <li>Welcome Screen</li>
-    <li>alle Tabellen</li>
-    <li>Item 3</li>
-    <li>Item 4</li>
+    <li>evtl. popupansicht bei klick auf tabellen</li>
+    <li>Projekte hinzufügen</li>
+    <li>Mitarbeiter zu Projekten zuordnen (altes Projekt: bei Projekten Option Mitarbeiter zuweisen)</li>
 </ul>
 </div><!-- Start: Footer Multi Column --><footer><div class="container py-4 py-lg-5" style="background-color: lightgray;margin-left: 5vw;margin-right: 5vw;max-width: 90%;min-width: 70%;"><div class="row justify-content-center"><!-- Start: About --><div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item"><h3 class="fs-6">About</h3><ul class="list-unstyled"><li><a class="link-secondary" href="/12_contactPage.html">Kontakt</a></li><li><a class="link-secondary" href="/13_teamPage.html">Team</a></li><li><a class="link-secondary" href="/14_impressPage.html">Impressum</a></li></ul></div><!-- End: About --><!-- Start: Social Icons --><div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social"><div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="/assets/img/logo.png?h=bdb80b2b629a6ff8137e3f6597fb9f11" alt="Navigation Icon" height= "30px";></span><span>CIOBAN</span></div><p class="text-muted copyright">Der Manager Ihres Vertrauens!</p></div><!-- End: Social Icons --></div><hr><div class="d-flex justify-content-between align-items-center pt-3"><p class="text-muted mb-0">Copyright © 2024 Cioban</p><ul class="list-inline mb-0"><li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
