--- a/GUI/06_typeOV.html
+++ b/GUI/06_typeOV.html
@@ -102,7 +102,8 @@
     </div>
   </footer><!-- End: Footer Multi Column -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/js/script.min.js?h=5ee7a0051dae7f3bbbed7896a07eea4d"></script>#
+  <script src="/assets/js/script.min.js?h=5ee7a0051dae7f3bbbed7896a07eea4d"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>        $(document).ready(function () {
       // DataTable initialization
       $('#typeTable').DataTable({
