--- a/GUI/06_typeOV.html
+++ b/GUI/06_typeOV.html
@@ -104,7 +104,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/js/script.min.js?h=5ee7a0051dae7f3bbbed7896a07eea4d"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>        $(document).ready(function () {
+  <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>  
+  <script>        
+  $(document).ready(function () {
       // DataTable initialization
       $('#typeTable').DataTable({
         "paging": false, // Deaktiviere die Anzeige der Seitenzahl
