--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -146,12 +146,12 @@ $('#projectTable').DataTable({
         }
     ]
 });
-fetch("http://localhost:8000/api/project")
+fetch("https://cioban.de:8000/api/project")
     .then(response => response.json())
     .then(data => {
         console.log(data);
         let table = $('#projectTable').DataTable();
-        data.forEach(element => {
+        data.project.forEach(element => {
             let startdate = element.start_date;
             let enddate = element.end_date;
             table.row.add([
