--- a/GUI/04_departmentOV.html
+++ b/GUI/04_departmentOV.html
@@ -114,12 +114,12 @@
             "info": false
         });
 
-        fetch("http://localhost:8000/api/department")
+        fetch("https://cioban.de:8000/api/department")
             .then(response => response.json())
             .then(data => {
                 console.log(data);
                 let table = $('#departmentTable').DataTable();
-                data.forEach((element, index) => {
+                data.department.forEach((element, index) => {
                     table.row.add([
                         element.department_ID,
                         element.dep_name,
