--- a/GUI/05_adressOV.html
+++ b/GUI/05_adressOV.html
@@ -118,12 +118,12 @@
             "info": false
         });
 
-        fetch("http://localhost:8000/api/address")
+        fetch("https://cioban.de:8000/api/address")
             .then(response => response.json())
             .then(data => {
                 console.log(data);
                 let table = $('#addressTable').DataTable();
-                data.forEach((element, index) => {
+                data.address.forEach((element, index) => {
                     table.row.add([
                         element.address_ID,
                         element.company,
