--- a/GUI/06_typeOV.html
+++ b/GUI/06_typeOV.html
@@ -114,21 +114,22 @@
         "info": false // Deaktiviere die Anzeige "Showing x to y of z entries"
       });
 
-      fetch("http://localhost:8000/api/type")
-        .then(response => response.json())
-        .then(data => {
-          console.log(data);
-          let table = $('#typeTable').DataTable();
-          data.forEach((element, index) => {
-            table.row.add([
-              element.type_ID,
-              element.type_name,
-              element.type_description
-            ]).draw();
-          });
-        })
-        .catch(error => console.log(error));
-    });
+      fetch("https://cioban.de:8000/api/type")
+    .then(response => response.json())
+    .then(data => {
+      console.log(data);
+      let table = $('#typeTable').DataTable();
+      // Zugriff auf das Array von Objekten mit dem Schlüssel "type"
+      data.type.forEach((element, index) => {
+        table.row.add([
+          element.type_id,
+          element.type_name,
+          element.type_description
+        ]).draw();
+      });
+    })
+    .catch(error => console.log(error));
+});
     </script>
 </body>
 
