--- a/GUI/07_educationDegreeOV.html
+++ b/GUI/07_educationDegreeOV.html
@@ -113,12 +113,12 @@
             "info": false
         });
 
-        fetch("http://localhost:8000/api/education_degree")
+        fetch("https://cioban.de:8000/api/education_degree")
             .then(response => response.json())
             .then(data => {
                 console.log(data);
                 let table = $('#educationTable').DataTable();
-                data.forEach((element, index) => {
+                data.education_degree.forEach((element, index) => {
                     table.row.add([
                         element.education_ID,
                         element.education_name
