--- a/GUI/09_skillOV.html
+++ b/GUI/09_skillOV.html
@@ -114,12 +114,12 @@
             "info": false
         });
 
-        fetch("http://localhost:8000/api/skill")
+        fetch("https://cioban.de:8000/api/skill")
             .then(response => response.json())
             .then(data => {
                 console.log(data);
                 let table = $('#skillTable').DataTable();
-                data.forEach((element, index) => {
+                data.skill.forEach((element, index) => {
                     table.row.add([
                         element.skill_ID,
                         element.skill_name,
