delete port from fetch

--- a/GUI/06_typeOV.html
+++ b/GUI/06_typeOV.html
@@ -114,7 +114,7 @@
     "info": false // Deaktiviere die Anzeige "Showing x to y of z entries"
   });
 
-  fetch("https://cioban.de:8000/api/type")
+  fetch("https://cioban.de/api/type")
     .then(response => response.json())
     .then(data => {
       console.log(data);
