--- a/GUI/06_typeOV.html
+++ b/GUI/06_typeOV.html
@@ -114,13 +114,13 @@
     "info": false // Deaktiviere die Anzeige "Showing x to y of z entries"
   });
 
-  fetch("https://cioban.de/api/type/")
+  fetch("https://cioban.de/api/type")
     .then(response => response.json())
     .then(data => {
       console.log(data);
       let table = $('#typeTable').DataTable();
       // Zugriff auf das Array von Objekten mit dem Schlüssel "type"
-      data.type.forEach((element, index) => {
+      data.type.type.forEach((element, index) => {
         table.row.add([
           element.type_id,
           element.type_name,
