--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -168,7 +168,7 @@
         ]
     });
     
-    fetch("https://cioban.de/api/personal")
+    fetch("https://cioban.de/api/employee")
         .then(response => response.json())
         .then(data => {
             console.log(data);
