--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -186,7 +186,7 @@
 
         data.personal.forEach(element => {
             table.row.add([
-                element.employee_ID,
+                element.employee_id,
                 element.first_name,
                 element.last_name,
                 element.free_fte,
