--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -144,7 +144,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 <script>        
-    $(document).ready(function() {
+ $(document).ready(function () {
     $('#personalTable').DataTable({
         "paging": false,
         "searching": false,
@@ -152,38 +152,51 @@
         "columnDefs": [
             {
                 "targets": 6,
-                "render": function ( data, type, row ) {
-                    var date = moment(data);
-                    if (type === 'display') {
-                        return date.format('DD.MM.YYYY');
+                "render": function (data, type, row) {
+                    if (type === 'display' && data) {
+                        var date = new Date(data);
+                        var day = date.getDate().toString().padStart(2, '0');
+                        var month = (date.getMonth() + 1).toString().padStart(2, '0');
+                        var year = date.getFullYear();
+                        return day + '.' + month + '.' + year;
                     }
-                    return date.format('YYYYMMDD');
+                    return data;
                 }
             }
         ]
     });
-    
-    fetch("https://cioban.de:8000/api/personal")
-        .then(response => response.json())
-        .then(data => {
-            console.log(data);
-            let table = $('#personalTable').DataTable();
-            data.personal.forEach(element => {
-                let entryDate = element.entry_date; // Keine Formatierung hier
-                table.row.add([
-                    element.employee_ID,
-                    element.first_name,
-                    element.last_name,
-                    element.free_fte,
-                    element.e_mail,
-                    element.phone_number,
-                    entryDate,
-                    element.exp_lvl_description,
-                    element.type_name,
-                ]).draw();
-            });
-        })
-        .catch(error => console.log(error));
+
+            fetch("https://cioban.de/api/employee")
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        return response.json();
+    })
+    .then(data => {
+        if (!data || !data.personal || !Array.isArray(data.personal)) {
+            throw new Error('Unexpected data format');
+        }
+
+        console.log(data);
+
+        let table = $('#personalTable').DataTable();
+
+        data.personal.forEach(element => {
+            table.row.add([
+                element.employee_id,
+                element.first_name,
+                element.last_name,
+                element.free_fte,
+                element.e_mail,
+                element.phone_number,
+                element.entry_date, 
+                element.exp_lvl_description,
+                element.type_name,
+            ]).draw();
+        });
+    })
+    .catch(error => console.error('Error fetching data:', error));
 });
 </script>
 </body>
