--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -230,11 +230,11 @@ fetch("https://cioban.de/api/project")
             let startdate = element.start_date;
             let enddate = element.end_date;
             table.row.add([
-                element.project_ID,
-                element.proj_name,
-                element.dep_name,
+                element.project_id,
+                element.project_name,
+                element.department_name,
+                element.supervisor,
                 element.proj_priority,
-                element.last_name,
                 element.needed_fte,
                 element.current_fte,
                 startdate,
