--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -177,31 +177,71 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
   <script>
+$(document).ready(function () {
+    $('#projectTable').DataTable({
+        "paging": false,
+        "searching": false,
+        "info": false,
+        "ordering": false, // disable column sorting
+        "columnDefs": [
+            {
+                "targets": [7, 8],
+                "sortable": false, // disable sorting for startdate and enddate columns
+                "render": function (data, type, row) {
+                    if (type === 'display' && data) {
+                        return formatDate(data);
+                    }
+                    return data;
+                }
+            }
+        ]
+    });
 
-fetch("https://cioban.de/api/project")
-    .then(response => response.json())
-    .then(data => {
-        console.log(data);
-        let table = $('#projectTable').DataTable();
-        data.project.forEach(element => {
-            let startdate = element.start_date;
-            let enddate = element.end_date;
-            table.row.add([
-                element.project_id,
-                element.project_name,
-                element.department_name,
-                element.supervisor,
-                element.proj_priority,
-                element.needed_fte,
-                element.current_fte,
-                startdate,
-                enddate
-            ]).draw();
-        });
-    })
-    .catch(error => console.log(error));
+    fetch("https://cioban.de/api/project")
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            if (!data || !data.project || !Array.isArray(data.project)) {
+                throw new Error('Unexpected data format');
+            }
 
+            console.log(data);
 
+            let table = $('#projectTable').DataTable();
+
+            data.project.forEach(element => {
+                let startdate = element.start_date;
+                let enddate = element.end_date;
+                table.row.add([
+                    element.project_id,
+                    element.project_name,
+                    element.department_name,
+                    element.supervisor,
+                    element.proj_priority,
+                    element.needed_fte,
+                    element.current_fte,
+                    startdate,
+                    enddate
+                ]).draw();
+            });
+        })
+        .catch(error => console.error('Error fetching data:', error));
+});
+
+function formatDate(dateString) {
+    if (dateString) {
+        var date = new Date(dateString);
+        var day = date.getDate().toString().padStart(2, '0');
+        var month = (date.getMonth() + 1).toString().padStart(2, '0');
+        var year = date.getFullYear();
+        return day + '.' + month + '.' + year;
+    }
+    return dateString;
+}
 </script>
 </body>
 
