--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -178,111 +178,113 @@
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 
     <script>
-$(document).ready(function () {
-    $('#projectTable').DataTable({
-        "paging": false,
-        "searching": false,
-        "info": false,
-        "ordering": false, // disable column sorting
-        "columnDefs": [
-            {
-                "targets": [7, 8],
-                "sortable": false, // disable sorting for startdate and enddate columns
-                "render": function (data, type, row) {
-                    if (type === 'display' && data) {
-                        return formatDate(data);
+document.addEventListener('DOMContentLoaded', function() {
+    $(document).ready(function () {
+        $('#projectTable').DataTable({
+            "paging": false,
+            "searching": false,
+            "info": false,
+            "ordering": false, // disable column sorting
+            "columnDefs": [
+                {
+                    "targets": [7, 8],
+                    "sortable": false, // disable sorting for startdate and enddate columns
+                    "render": function (data, type, row) {
+                        if (type === 'display' && data) {
+                            return formatDate(data);
+                        }
+                        return data;
                     }
-                    return data;
                 }
-            }
-        ]
+            ]
+        });
+
+        fetch("https://cioban.de/api/project")
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                if (!data || !data.project || !Array.isArray(data.project)) {
+                    throw new Error('Unexpected data format');
+                }
+
+                console.log(data);
+
+                let table = $('#projectTable').DataTable();
+
+                data.project.forEach(element => {
+                    let startdate = element.start_date;
+                    let enddate = element.end_date;
+                    table.row.add([
+                        element.project_id,
+                        element.project_name,
+                        element.department_name,
+                        element.supervisor,
+                        element.proj_priority,
+                        element.needed_fte,
+                        element.current_fte,
+                        startdate,
+                        enddate
+                    ]).draw();
+                });
+
+                // Get the popup elements
+                var popupContainer = document.getElementById('popupContainer-project');
+                var popupContent = document.getElementById('popupContent-project');
+                var rowDataDiv = document.getElementById('rowData-project');
+                var closeBtn = document.getElementById('closeBtn-project');
+
+                // Get the number of columns
+                var numColumns = table.rows[0].cells.length;
+                var columnHeaders = [];
+                for (var i = 0; i < numColumns; i++) {
+                    columnHeaders.push(table.rows[0].cells[i].innerHTML);
+                }
+
+                // Style content
+                popupContent.style.padding = '40px';
+                popupContent.style.borderRadius = '20px';
+                popupContent.style.fontSize = '16px';
+                popupContent.style.border = '1px solid lightgrey';
+                popupContent.style.borderRadius = '5px';
+
+                // Attach click event listener to each row
+                var rows = table.getElementsByTagName('tr');
+                for (var i = 0; i < rows.length; i++) {
+                    rows[i].onclick = function() {
+                        // On single click, show popup with row data
+                        var rowData = '';
+                        for (var j = 0; j < numColumns; j++) {
+                            rowData += columnHeaders[j] + ': ' + this.cells[j].innerHTML + '<br>';
+                        }
+                        rowDataDiv.innerHTML = rowData;
+                        popupContainer.style.display = 'block';
+                    };
+                }
+
+                // Attach click event listener to close button
+                closeBtn.onclick = function() {
+                    // Hide the popup
+                    popupContainer.style.display = 'none';
+                };
+            })
+            .catch(error => console.error('Error fetching data:', error));
     });
 
-    fetch("https://cioban.de/api/project")
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-            return response.json();
-        })
-        .then(data => {
-            if (!data || !data.project || !Array.isArray(data.project)) {
-                throw new Error('Unexpected data format');
-            }
-
-            console.log(data);
-
-            let table = $('#projectTable').DataTable();
-
-            data.project.forEach(element => {
-                let startdate = element.start_date;
-                let enddate = element.end_date;
-                table.row.add([
-                    element.project_id,
-                    element.project_name,
-                    element.department_name,
-                    element.supervisor,
-                    element.proj_priority,
-                    element.needed_fte,
-                    element.current_fte,
-                    startdate,
-                    enddate
-                ]).draw();
-            });
-
-            // Get the popup elements
-            var popupContainer = document.getElementById('popupContainer-project');
-            var popupContent = document.getElementById('popupContent-project');
-            var rowDataDiv = document.getElementById('rowData-project');
-            var closeBtn = document.getElementById('closeBtn-project');
-
-            // Get the number of columns
-            var numColumns = table.rows[0].cells.length;
-            var columnHeaders = [];
-            for (var i = 0; i < numColumns; i++) {
-                columnHeaders.push(table.rows[0].cells[i].innerHTML);
-            }
-
-            // Style content
-            popupContent.style.padding = '40px';
-            popupContent.style.borderRadius = '20px';
-            popupContent.style.fontSize = '16px';
-            popupContent.style.border = '1px solid lightgrey';
-            popupContent.style.borderRadius = '5px';
-
-            // Attach click event listener to each row
-            var rows = table.getElementsByTagName('tr');
-            for (var i = 0; i < rows.length; i++) {
-                rows[i].onclick = function() {
-                    // On single click, show popup with row data
-                    var rowData = '';
-                    for (var j = 0; j < numColumns; j++) {
-                        rowData += columnHeaders[j] + ': ' + this.cells[j].innerHTML + '<br>';
-                    }
-                    rowDataDiv.innerHTML = rowData;
-                    popupContainer.style.display = 'block';
-                };
-            }
-
-            // Attach click event listener to close button
-            closeBtn.onclick = function() {
-                // Hide the popup
-                popupContainer.style.display = 'none';
-            };
-        })
-        .catch(error => console.error('Error fetching data:', error));
-});
-
-function formatDate(dateString) {
-    if (dateString) {
-        var date = new Date(dateString);
-        var day = date.getDate().toString().padStart(2, '0');
-        var month = (date.getMonth() + 1).toString().padStart(2, '0');
-        var year = date.getFullYear();
-        return day + '.' + month + '.' + year;
+    function formatDate(dateString) {
+        if (dateString) {
+            var date = new Date(dateString);
+            var day = date.getDate().toString().padStart(2, '0');
+            var month = (date.getMonth() + 1).toString().padStart(2, '0');
+            var year = date.getFullYear();
+            return day + '.' + month + '.' + year;
+        }
+        return dateString;
     }
-    return dateString;
-}
+});
 </script>
 </body>
 
