--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -174,6 +174,8 @@
     </footer><!-- End: Footer Multi Column -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/script.min.js?h=967d7ef22ca135c77651403670e2a1b9"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script>
     $(document).ready(function () {
         $('#projectTable').DataTable({
