--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -191,7 +191,7 @@
 
         let table = $('#personalTable').DataTable();
 
-        data.personal.forEach(element => {
+        data.employee.forEach(element => {
             table.row.add([
                 element.employee_id,
                 element.first_name,
