chnaged personal to employee

--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -183,7 +183,7 @@
         return response.json();
     })
     .then(data => {
-        if (!data || !data.personal || !Array.isArray(data.personal)) {
+        if (!data || !data.employee || !Array.isArray(data.employee)) {
             throw new Error('Unexpected data format');
         }
 
