--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -149,7 +149,8 @@
         </div>
     </footer><!-- End: Footer Multi Column -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/script.min.js?h=2160a6349c32947573f922bc20aee6be"></script>
+    <script src="/assets/js/script.min.js?h=b91e3222b91e1d5c812614a4f089d4e9"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 <script>        
@@ -207,7 +208,6 @@
     })
     .catch(error => console.error('Error fetching data:', error));
 });
-</script>
-</body>
+</script></body>
 
 </html>
