chnaged order project

--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -223,8 +223,8 @@
                             element.project_ID,
                             element.proj_name,
                             element.dep_name,
+                            element.supervisor,
                             element.proj_priority,
-                            element.last_name,
                             element.needed_fte,
                             element.current_fte,
                             startdate,
