--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -221,7 +221,7 @@
                         let enddate = formatDate(element.end_date);
                         table.row.add([
                             element.project_ID,
-                            element.proj_name,
+                            element.project_name,
                             element.dep_name,
                             element.supervisor,
                             element.proj_priority,
