--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -220,7 +220,7 @@
                         let startdate = formatDate(element.start_date);
                         let enddate = formatDate(element.end_date);
                         table.row.add([
-                            element.project_ID,
+                            element.project_id,
                             element.project_name,
                             element.dep_name,
                             element.supervisor,
